[gd_scene load_steps=69 format=2]

[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/Player.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/Mouse.png" type="Texture" id=3]
[ext_resource path="res://Sprites/FX/Dust_puff.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Player/Knife.gd" type="Script" id=5]
[ext_resource path="res://Sprites/FX/Knife_puff.png" type="Texture" id=6]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player_2D.gd" type="Script" id=7]
[ext_resource path="res://SFX/SFX/Stab.wav" type="AudioStream" id=8]
[ext_resource path="res://SFX/SFX/Footstep_1.wav" type="AudioStream" id=9]
[ext_resource path="res://Sprites/Player/Scarf.png" type="Texture" id=10]
[ext_resource path="res://Sprites/FX/Light.png" type="Texture" id=11]
[ext_resource path="res://Sprites/UI/HP_bar.png" type="Texture" id=12]
[ext_resource path="res://Sprites/UI/Circle_pointer.png" type="Texture" id=13]
[ext_resource path="res://SFX/SFX/In_light.wav" type="AudioStream" id=14]
[ext_resource path="res://SFX/SFX/Death_sound.wav" type="AudioStream" id=15]
[ext_resource path="res://SFX/SFX/stand_up.wav" type="AudioStream" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.5, 2.5 )

[sub_resource type="Curve" id=56]
_data = [ Vector2( 0, 0.518182 ), 0.0, 0.0, 0, 0, Vector2( 0.485149, 0.963636 ), 0.0, 0.0, 0, 0, Vector2( 0.995049, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=57]
_data = [ Vector2( 0.0047619, 0.0363636 ), 0.0, 0.0, 0, 0, Vector2( 0.509524, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "Default",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "Wake_up",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="Animation" id=23]
resource_name = "Default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Default" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Dust_puffs:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=24]
resource_name = "Die"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Default", "Death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Dust_puffs:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:can_move")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("Mouse")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hide"
} ]
}

[sub_resource type="Animation" id=25]
resource_name = "Idle"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Dust_puffs:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=26]
resource_name = "Run"
length = 0.35
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Dust_puffs:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("SFX/Footstep")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=27]
resource_name = "Wake_up"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Wake_up" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:can_move")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Dust_puffs:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "shake"
}, {
"args": [  ],
"method": "shake"
}, {
"args": [  ],
"method": "shake"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("SFX/Stand_up")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=28]
resource_name = "Walk"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Dust_puffs:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("SFX/Footstep")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.15, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "Die"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "Run"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "Wake_up"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=34]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]
disabled = true

[sub_resource type="AnimationNodeStateMachine" id=44]
states/Die/node = SubResource( 29 )
states/Die/position = Vector2( 653, 213 )
states/Idle/node = SubResource( 30 )
states/Idle/position = Vector2( 485, 213 )
states/Run/node = SubResource( 31 )
states/Run/position = Vector2( 305, 317 )
states/Wake_up/node = SubResource( 32 )
states/Wake_up/position = Vector2( 485, 123 )
states/Walk/node = SubResource( 33 )
states/Walk/position = Vector2( 305, 213 )
transitions = [ "Wake_up", "Idle", SubResource( 34 ), "Idle", "Wake_up", SubResource( 35 ), "Walk", "Run", SubResource( 36 ), "Run", "Walk", SubResource( 37 ), "Walk", "Idle", SubResource( 38 ), "Idle", "Walk", SubResource( 39 ), "Run", "Idle", SubResource( 40 ), "Idle", "Run", SubResource( 41 ), "Idle", "Die", SubResource( 42 ), "Die", "Idle", SubResource( 43 ) ]
start_node = "Wake_up"
end_node = "Die"
graph_offset = Vector2( -78, -21 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=45]

[sub_resource type="CanvasItemMaterial" id=58]
blend_mode = 1

[sub_resource type="Animation" id=46]
resource_name = "Attack"
length = 0.12
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Knife:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Knife:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.09, 0.11, 0.12 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 2 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Knife:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.09, 0.11 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 10, 0 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CPUParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.11 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Knife_2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 10, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Knife_2:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.02, 0.12 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Knife_2:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "method"
tracks/8/path = NodePath("Stab_noise")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Curve" id=55]
_data = [ Vector2( 0.029703, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.509901, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0545454 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CanvasItemMaterial" id=59]
blend_mode = 1

[sub_resource type="CapsuleShape2D" id=54]
radius = 6.0
height = 26.0

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 1 )
can_move = false

[node name="Cam_transform" type="RemoteTransform2D" parent="."]
position = Vector2( 0, -12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="Dust_puffs" type="CPUParticles2D" parent="."]
position = Vector2( 0, -3 )
emitting = false
lifetime = 0.65
explosiveness = 0.01
local_coords = false
texture = ExtResource( 4 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
angle = 720.0
angle_random = 1.0
scale_amount_curve = SubResource( 56 )

[node name="Scarf" type="Line2D" parent="."]
width = 5.0
width_curve = SubResource( 57 )
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 10 )
texture_mode = 1
joint_mode = 1

[node name="Scarf_pos" type="Position2D" parent="."]
position = Vector2( 0, -15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 22 )
animation = "Idle"
frame = 1
offset = Vector2( 0, -13 )

[node name="Restart_timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Player_anims" type="AnimationPlayer" parent="."]
anims/Default = SubResource( 23 )
anims/Die = SubResource( 24 )
anims/Idle = SubResource( 25 )
anims/Run = SubResource( 26 )
anims/Wake_up = SubResource( 27 )
anims/Walk = SubResource( 28 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 44 )
anim_player = NodePath("../Player_anims")
active = true
parameters/playback = SubResource( 45 )

[node name="Mouse" type="Node2D" parent="."]
position = Vector2( 0, -12 )
z_index = 100

[node name="Hp_bar" type="TextureProgress" parent="Mouse"]
margin_left = -16.0
margin_top = -16.0
margin_right = 24.0
margin_bottom = 24.0
max_value = 50.0
step = 0.5
value = 50.0
texture_progress = ExtResource( 12 )
fill_mode = 4

[node name="Mouse_sprite" type="Sprite" parent="Mouse"]
texture = ExtResource( 3 )

[node name="Mouse_light" type="Sprite" parent="Mouse/Mouse_sprite"]
modulate = Color( 0.631373, 0.239216, 0.466667, 1 )
material = SubResource( 58 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 11 )

[node name="Circle_pointer" type="Node2D" parent="."]
position = Vector2( 0, -12 )
z_index = 99

[node name="Sprite" type="Sprite" parent="Circle_pointer"]
position = Vector2( -16, 0 )
texture = ExtResource( 13 )
flip_h = true

[node name="Knife" type="Node2D" parent="."]
position = Vector2( 0, -12 )
z_index = 4
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Knife"]
anims/Attack = SubResource( 46 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Knife"]
position = Vector2( 16, 0 )
emitting = false
amount = 10
lifetime = 0.1
explosiveness = 1.0
local_coords = false
texture = ExtResource( 6 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 210.0
initial_velocity_random = 1.0
scale_amount_curve = SubResource( 55 )

[node name="Stab_noise" type="AudioStreamPlayer2D" parent="Knife"]
bus = "Player"
script = ExtResource( 7 )
samples = [ ExtResource( 8 ) ]
random_volume_range = 0
random_pitch_range = 0.3

[node name="Knife_2" type="Polygon2D" parent="Knife"]
visible = false
position = Vector2( 10, 0 )
polygon = PoolVector2Array( 0, 0, 8, -4, 24, 0, 8, 4 )

[node name="Knife" type="Polygon2D" parent="Knife"]
visible = false
material = SubResource( 59 )
scale = Vector2( 1e-05, 1e-05 )
color = Color( 0.235294, 0.109804, 0.262745, 1 )
polygon = PoolVector2Array( -2.86102e-06, 0, 5.33333, -5.33333, 32, 0, 5.33333, 5.33333 )

[node name="Area2D" type="Area2D" parent="Knife"]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Knife/Area2D"]
position = Vector2( 29, 0 )
rotation = 1.5708
shape = SubResource( 54 )
disabled = true

[node name="Attack_timer" type="Timer" parent="Knife"]
wait_time = 0.25
one_shot = true

[node name="SFX" type="Node2D" parent="."]

[node name="Footstep" type="AudioStreamPlayer2D" parent="SFX"]
bus = "Player"
script = ExtResource( 7 )
samples = [ ExtResource( 9 ) ]
random_volume_range = 0
random_pitch_range = 0.5

[node name="Enter_light" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 14 )
bus = "Player"

[node name="Death" type="AudioStreamPlayer2D" parent="SFX"]
bus = "Player"
script = ExtResource( 7 )
samples = [ ExtResource( 15 ) ]
random_volume_range = 0
random_pitch_range = 0.3

[node name="Stand_up" type="AudioStreamPlayer2D" parent="SFX"]
bus = "Player"
script = ExtResource( 7 )
samples = [ ExtResource( 16 ) ]
random_volume_range = 0
random_pitch_range = 0.7

[connection signal="timeout" from="Restart_timer" to="." method="_on_Restart_timer_timeout"]
[connection signal="body_entered" from="Knife/Area2D" to="Knife" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Knife/Attack_timer" to="Knife" method="_on_Attack_timer_timeout"]
